웹툰 내용 넣기

--- a/webtoon.html
+++ b/webtoon.html
@@ -5,70 +5,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>webtoon</title>
     <style>
+        :root {
+            --var-basic: #fff;
+            --var-white: #fff;
+            --var-main: #ff60b0;
+            --var-sub: #ffcdde;
+            --var-acc: #00d564;
+        }
         input[type="radio"], input[type="checkbox"] {display: none;}
         /* 웹툰 레이아웃 */
-        .webtoonWrap {position: relative;;max-width:500px;margin: 0 auto;box-shadow: 5px 5px 5px rgba(0,0,0,.1);}
+        .webtoonWrap {position: relative;max-width:500px;margin: 0 auto;overflow: hidden;}
         .webtoonWrap * {margin: 0;padding: 0;box-sizing: border-box;}
         .webtoonWrap input {display: none;}
-        .webtoonWrap .info-wrapper {background: #fff;}
+        .webtoonWrap .info-wrapper {background: var(--var-basic);}
         .webtoonWrap .info-wrapper .poster {position:relative;padding-bottom:60%;}
-        .webtoonWrap .info-wrapper .poster .bg1 {position: absolute;top:0;left: 0;width:100%;height:50%;background: #ff60b0;}
-        .webtoonWrap .info-wrapper .poster .bg2 {position:absolute;bottom:0;left:50%;transform: translateX(-50%);width:80%;height:70%;background: #ffcdde;border-radius: 10px;box-shadow: 0 0 5px rgba(0,0,0,.1);}
+        .webtoonWrap .info-wrapper .poster .bg1 {position: absolute;top:0;left: 0;width:100%;height:50%;background: var(--var-main);}
+        .webtoonWrap .info-wrapper .poster .bg2 {position:absolute;bottom:0;left:50%;transform: translateX(-50%);width:80%;height:70%;background: var(--var-sub);border-radius: 10px;box-shadow: 0 0 5px rgba(0,0,0,.1);}
         .webtoonWrap .info-wrapper .poster .img {position: absolute;bottom: 0;left:50%;transform: translateX(-50%);width: 80%;height:90%;background: url('images/뿔소라.png') no-repeat bottom center / contain;}
         .webtoonWrap .info-wrapper .story {padding: 15px 10px;text-align: left;}
         .webtoonWrap .info-wrapper .story .title {font-size: 16px;}
         .webtoonWrap .info-wrapper .story > span {font-size: 12px;}
-        .webtoonWrap .info-wrapper .story .more label {display: block;margin: 10px 0;}
-        .webtoonWrap .info-wrapper .story .more label > span {font-size:12px;color:#a6a6a6;display: -webkit-box;-webkit-line-clamp: 1;-webkit-box-orient:vertical;overflow: hidden;}
+        .webtoonWrap .info-wrapper .story .more label {display: block;justify-content:start;margin: 10px 0;}
+        .webtoonWrap .info-wrapper .story .more label > .summary {font-size:12px;color:#a6a6a6;display: -webkit-box;-webkit-line-clamp: 1;-webkit-box-orient:vertical;overflow: hidden;}
         .webtoonWrap .info-wrapper .story .more > div > span {display: inline-block;padding: 5px;background: #efefef;font-size: 12px;border-radius: 3px;margin-bottom: 6px;}
-        .webtoonWrap .c-wrapper {display:flex; justify-content: center;align-items:center;margin: 0 10px;padding: 20px 0; background: #00d564;font-size: 14px;color: #fff;border-radius: 5px;margin-bottom: 20px;}
+        .webtoonWrap .c-wrapper {padding-bottom: 20px;}
+        .webtoonWrap .c-wrapper > div {display:flex; justify-content: center;align-items:center;margin: 0 10px;padding: 20px 0; background: var(--var-acc);font-size: 14px;color: #fff;border-radius: 5px;}
         .webtoonWrap .c-wrapper .cookie {font-size: 18px;}
         .webtoonWrap .c-wrapper .basic, .webtoonWrap .c-wrapper .have {margin-left: 5px;}
         .webtoonWrap .c-wrapper .have {display: none;}
 
         /* 회차 */
-        .webtoonWrap .cont-wrapper > label {display: flex;align-items: center;height:56px;border-bottom: 1px solid #eee;padding-left:10px;}
+        .webtoonWrap .cont-wrapper > label {display: flex;align-items: center;height:56px;border-bottom: 1px solid #eee;padding-left:10px;background: var(--var-basic);}
         .webtoonWrap .cont-wrapper > label .thumb {width:76px;height:45px;border-radius: 3px;border: 1px solid #eee;margin-right: 11px;}
         .webtoonWrap .cont-wrapper > .ep1 .thumb {background: url('images/썸네일1.jpg') no-repeat center / cover;}
         .webtoonWrap .cont-wrapper > .ep2 .thumb {background: url('images/썸네일2.jpg') no-repeat center / cover;}
         .webtoonWrap .cont-wrapper > .ep3 .thumb {background: url('images/썸네일3.jpg') no-repeat center / cover;}
         .webtoonWrap .cont-wrapper > label .ep-tit span {font-size: 14px;}
-        .webtoonWrap .cont-wrapper > label .ep-tit span::after {content:'click!';display: inline-block;font-size: 12px;margin-left: 5px;color:#ff60b0;font-weight: bold;}
+        .webtoonWrap .cont-wrapper > label .ep-tit span::after {content:'click!';display: inline-block;font-size: 12px;margin-left: 5px;color:var(--var-main);font-weight: bold;}
         .webtoonWrap .cont-wrapper > .zweiEp {display: none;}
 
         /* 3화 감상 */
-        .webtoonWrap .cookieModal {display:none;position: absolute;top:0;left: 0;width: 100%;height: 100%;background: rgba(0,0,0,.5);}
-        .webtoonWrap .cookieModal > div {position: absolute;top:50%;left: 50%;transform: translate(-50%,-50%);width: 80%;}
-        .webtoonWrap .cookieModal > div > div {background: #fff;border-radius: 10px;border: 2px solid #00d564;text-align: center;padding-top: 20px;}
-        .webtoonWrap .cookieModal p {text-align: center;font-size: 14px;margin-bottom: 10px;}
-        .webtoonWrap .cookieModal > div > label {display: block;width: 100%;text-align: center;padding: 7px 0; color: #fff;font-size: 14px;}
+        .webtoonWrap .modal-Wrapper {display:none;position: absolute;top:0;left: 0;width: 100%;height: 100%;background: rgba(0,0,0,.5);}
+        .webtoonWrap .modal-Wrapper > div {position: absolute;top:50%;left: 50%;transform: translate(-50%,-50%);width: 80%;}
+        .webtoonWrap .modal-Wrapper > div > div {background: var(--var-white);border-radius: 10px;border: 2px solid var(--var-acc);text-align: center;padding-top: 20px;}
+        .webtoonWrap .modal-Wrapper p {text-align: center;font-size: 14px;margin-bottom: 10px;}
+        .webtoonWrap .modal-Wrapper > div > label {display: block;width: 100%;text-align: center;padding: 7px 0; color: #fff;font-size: 14px;}
         /* if null */
         .webtoonWrap .null-cookie-wrapper > div > div {padding-bottom: 20px;}
         .webtoonWrap .null-cookie-wrapper a {margin: 20px 0;}
         .webtoonWrap .null-cookie-wrapper a img {width: 50%;}
         /* if zwei */
-        .webtoonWrap .zwei-cookie-wrapper p span {display: inline-block;border: 2px solid #00d564;padding: 5px;border-radius: 5px;font-weight: bold;color: #00d564;margin: 3px 0;}
-        .webtoonWrap .zwei-cookie-wrapper a {display: block;width:100%;background: #00d564;text-align: center;padding: 7px 0; color: #fff;font-size: 14px;text-decoration: none;margin-top: 20px;}
+        .webtoonWrap .zwei-cookie-wrapper p span {display: inline-block;border: 2px solid var(--var-acc);padding: 5px;border-radius: 5px;font-weight: bold;color: var(--var-acc);margin: 3px 0;}
+        .webtoonWrap .zwei-cookie-wrapper a {display: block;width:100%;background: var(--var-acc);text-align: center;padding: 7px 0; color: #fff;font-size: 14px;text-decoration: none;margin-top: 20px;}
 
-        .webtoonWrap .footer {background: #ff60b0;padding: 15px;font-size: 10px;text-align: center;color:#ffcdde;}
+        .webtoonWrap .footer {background: var(--var-main);padding: 15px;font-size: 10px;text-align: center;color:var(--var-sub);}
 
         /* 첫 화면 보너스 쿠키 이벤트 */
-        .bonusWrap {position: fixed;top:0;left: 0;width: 100%;height: 100%;background: rgba(0,0,0,.3);backdrop-filter: blur(10px);text-align: center;}
+        .bonusWrap {position: fixed;top:0;left: 0;z-index:999;width: 100%;height: 100%;background: rgba(0,0,0,.3);backdrop-filter: blur(10px);text-align: center;}
         .bonusWrap * {margin:0;padding:0;box-sizing: border-box;}
-        .bonusWrap > div {position: absolute;top:50%;left: 50%;transform: translate(-50%, -50%);padding:10px 30px;background:#fff;border-radius: 20px;box-shadow: 0 3px 5px rgba(0,0,0,.2);width:90%;max-width: 400px;}
-        .bonusWrap .event {display: inline-block; font-size: 12px; font-weight:bold;border-radius:20px;border:1px solid #00d564;background:#fff;padding: 2px 10px 4px;color: #00d564;margin: 10px 0;}
+        .bonusWrap > div {position: absolute;top:50%;left: 50%;transform: translate(-50%, -50%);padding:10px 30px;background:var(--var-white);border-radius: 20px;box-shadow: 0 3px 5px rgba(0,0,0,.2);width:90%;max-width: 400px;}
+        .bonusWrap .event {display: inline-block; font-size: 12px; font-weight:bold;border-radius:20px;border:1px solid var(--var-acc);background:var(--var-white);padding: 2px 10px 4px;color: var(--var-acc);margin: 10px 0;}
         .bonusWrap   h4 {font-size: 20px;margin: 10px 0;}
         .bonusWrap p {font-size: 12px;}
         .bonusWrap .event-box {display: flex;margin:20px 0;}
         .bonusWrap .event-box > label {flex:1;margin:0 5px;padding:10px;font-size:14px;border-radius:30px;font-weight:bold;}
         .bonusWrap .event-box > .no-btn {background: #f0f5f3;}
-        .bonusWrap .event-box > .yes-btn {background:#00d564;color: #fff;}
+        .bonusWrap .event-box > .yes-btn {background:var(--var-acc);color: #fff;}
 
-
-
-        .episode {display:none;position: fixed;top:0;left: 0;width: 100%;height: 100%;overflow-y: scroll;background: #fff;}
-
-
+        /* 에피소드 내용 */
+        .episode {display:none;position: fixed;top:0;left: 0;width: 100%;height: 100%;background: rgba(0,0,0,.5);backdrop-filter: blur(10px);}
+        .episode > div {position: absolute;top:50%;left: 50%;transform:translate(-50%, -50%);z-index:999;height: 80%;overflow-y: scroll;background: var(--var-basic);}
+        .episode .close-btn {display: block;position: absolute;top:90%;left:50%;transform: translateX(-50%);background: var(--var-acc);margin-top: 10px;padding: 5px 20px;border-radius: 20px;color: var(--var-white);font-weight: bold;}
+        .episode p {margin: 0 !important;}
+        .episode p img {width: 100%;}
 
         /* 보너스 쿠키 버튼 */
         #bonusYesBtn:checked ~ .bonusWrap {display: none;}
@@ -113,7 +122,7 @@
                 <div class="more">
                     <input type="checkbox" id="moreBtn">
                     <label for="moreBtn">
-                        <span>늘 중간은 하는애. 열심히는 하는 애. 결국 뭐든지 그럭저럭인 웹소설 작가 송소라. 만인의 호감픽, 국민MC 온도혁을 만나 예상치 못한 스타덤에 오르게 되는데…! 그토록 바라던 대박인생이 시작될까? 일과 재능, 사랑에 대한 이야기.</span>
+                        <span class="summary">늘 중간은 하는애. 열심히는 하는 애. 결국 뭐든지 그럭저럭인 웹소설 작가 송소라. 만인의 호감픽, 국민MC 온도혁을 만나 예상치 못한 스타덤에 오르게 되는데…! 그토록 바라던 대박인생이 시작될까? 일과 재능, 사랑에 대한 이야기.</span>
                     </label>
                     <div>
                         <span>#로맨스</span>
@@ -130,7 +139,9 @@
                 </div><!--more-->
             </div><!--story-->
             <div class="c-wrapper">
-                <span class="cookie">🍪</span>보유쿠키<span class="basic">0개</span><span class="have">2개</span>
+                <div>
+                    <span class="cookie">🍪</span>보유쿠키<span class="basic">0개</span><span class="have">2개</span>
+                </div>
             </div><!--c-wrapper-->
         </div><!--info-wrapper-->
         <div class="cont-wrapper">
@@ -162,7 +173,7 @@
             </label>
         </div><!--cont-wrapper-->
         <!--쿠키 0개 모달창-->
-        <div class="null-cookie-wrapper cookieModal">
+        <div class="null-cookie-wrapper modal-Wrapper">
             <div>
                 <div>
                     <p>쿠키가 2개 부족해요ㅠㅠ<br>다음화가 궁금하다면 클릭👇👇</p>
@@ -174,7 +185,7 @@
             </div>
         </div><!--null-cookie-wrapper-->
         <!--쿠키 2개 모달창-->
-        <div class="zwei-cookie-wrapper cookieModal">
+        <div class="zwei-cookie-wrapper modal-Wrapper">
             <div>
                 <div>
                     <p>쿠키 2개를 사용하여<br><span>최고의 뿔소라 3화</span><br>를 감상하시겠습니까?</p>
@@ -205,11 +216,24 @@
 
     <!--웹툰 1화-->
     <div class="episode ep1Wrap">
-        <label for="closeBtn" class="close-btn">X</label>
+        <div>
+            <p><img src="images/표지.jpg"></p>
+            <span>내용내용내용</span>
+            <p><img src="images/표지.jpg"></p>
+            <p><img src="images/표지.jpg"></p>
+            <p><img src="images/표지.jpg"></p>
+            <p><img src="images/표지.jpg"></p>
+            <p><img src="images/표지.jpg"></p>
+            <p><img src="images/표지.jpg"></p>
+        </div>
+        <label for="closeBtn" class="close-btn">닫기</label>
     </div><!--episode ep1Wrap-->
     <!--웹툰 2화-->
     <div class="episode ep2Wrap">
-        <label for="closeBtn" class="close-btn">X</label>
+        <div>
+            
+        </div>
+        <label for="closeBtn" class="close-btn">닫기</label>
     </div><!--episode ep2Wrap-->
 </body>
 </html>
